--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,15 +1,15 @@
 stages:
   prepare:
-    cmd: python src/prepare.py --out_dir data
+    cmd: python src/prepare.py --in_csv data/zameen-updated.csv --out_dir data
     outs:
-      - data/iris.csv
+      - data/house_prices.csv
     params:
       - prepare.random_seed
 
   features:
-    cmd: python src/features.py --in_csv data/iris.csv --out_dir data --test_size ${features.test_size} --random_state ${features.random_state}
+    cmd: python src/features.py --in_csv data/house_prices.csv --out_dir data --test_size ${features.test_size} --random_state ${features.random_state}
     deps:
-      - data/iris_dataset.csv
+      - data/house_prices.csv
       - src/features.py
     outs:
       - data/X_train.npy
@@ -21,22 +21,22 @@ stages:
       - features.random_state
 
   train:
-    cmd: python src/train.py --data_dir data --model_out model.pkl
+    cmd: python src/train.py --data_dir data --model_out models/model.pkl
     deps:
       - data/X_train.npy
       - data/y_train.npy
       - src/train.py
     outs:
-      - model.pkl
+      - models/model.pkl
     params:
       - train.n_estimators
       - train.max_depth
       - train.random_state
 
   evaluate:
-    cmd: python src/evaluate.py --data_dir data --model model.pkl --out metrics/eval.json
+    cmd: python src/evaluate.py --data_dir data --model models/model.pkl --out metrics/eval.json
     deps:
-      - model.pkl
+      - models/model.pkl
       - data/X_test.npy
       - data/y_test.npy
       - src/evaluate.py
